tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__StabilizedBaryon-n8PKF63sSSi0y8ZBb2RIKQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12532472301081610281,
  "prerequisites": [
    1192969134860528592
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After automating Absolute Baryonic Perfection Purification Unit, you slowly start getting Stabilized Baryonic Matter, at a rate of 500mb/parallel every 120 seconds.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Stabilized Baryonic Matter",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1192969134860528592
  ],
  "rewards": [],
  "tasks": []
}
