tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__StoppingtheInfin-3yz1WCEzQ_KQxW8p7_29-Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2392330537751395833,
  "prerequisites": [
    3095177681319085336,
    2590
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Already struggling to keep up with infinity demand? Not to worry, the component assembly line may just be what you need. You probably have one already. Upgrade it to UEV to allow creating UEV components at a significantly reduced cost.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Stopping the Infinity Bleed",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3095177681319085336,
    2590
  ],
  "rewards": [],
  "tasks": []
}
