tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__Tesseract-AAAAAAAAAAAAAAAAAAAMpw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3239,
  "prerequisites": [
    3217,
    3368210867956738869
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Engineering beyond your comprehension. Destroying this strange higher dimensional object in a macerator is very easy though.\n\n[note]You may proceed to UIV now. Best of luck.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tesseract",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3217,
    3368210867956738869
  ],
  "rewards": [],
  "tasks": []
}
