tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__ThePerfectCPU-iO7VxrxPTbutGjRtrcoAxw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13569149670760513735,
  "prerequisites": [
    9086928863325674984,
    11313972541508178496
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Using your new optically enhanced boards and chips, you've managed to create what looks like the perfect CPU! Surely this will be able to handle even the advanced computations you need to perform to breach dimensional boundaries.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Perfect CPU?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    9086928863325674984,
    11313972541508178496
  ],
  "rewards": [],
  "tasks": []
}
