tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__WelcometoHell-AAAAAAAAAAAAAAAAAAAKIQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2593,
  "prerequisites": [
    925,
    13520174359713356034
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Congratulations, you've beaten most of the pack! Here we have some absolutely outrageous final challenges for you. Maybe start by showing us your certificate.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Welcome to Hell!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    925,
    13520174359713356034
  ],
  "rewards": [],
  "tasks": []
}
